FIX: Correção swagger e serviços extras
